fix button text spacing

--- a/A1/style.css
+++ b/A1/style.css
@@ -405,7 +405,7 @@ label.consent {
     }
 
     button.feedback {
-        margin: 0;
+        margin: 8px 0 0;
     }
 
     .btn {
